--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     },
     "dependencies": {
         "axios": "^0.21.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "dotenv": "^10.0.0"
     },
     "keywords": [
         "hoichoi",
